--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/theta-data/theta-stream/issues"
   },
-  "homepage": "https://github.com/theta-data/theta-stream#readme"
+  "homepage": "https://github.com/theta-data/theta-stream#readme",
+  "dependencies": {
+    "videojs": "^1.0.0"
+  }
 }
